fixed so it works on firefox (there was a bug before), also fixed the colors with keyboard use too.

--- a/base.css
+++ b/base.css
@@ -16,7 +16,7 @@
 	border-radius:10px;
 }
 
-.white-key:active, .white-key:focus {
+.white-key:focus {
 
 	background-color:#DCDCDC;
 
@@ -30,7 +30,7 @@
 	border-radius:2px;
 }
 
-.black-key:active {
+.black-key:focus {
 
 	background-color:#3d3d3d;
 
